<resources>
    <string name="google_app_id">dontech</string>
    <string name="app_name">돈 테크</string>
    <string name="app_description">대한민국 1등 돈버는 가계부</string>

    <!-- 공지사항 -->
    <!-- 세팅 : 공지사항 -->
    <string name="setting_announce_body">
        v1.6\n
        버그 개선.\n\n
        v1.4\n
        대시보드 가계부 리스트 선택 안되는 현상 수정.\n\n
        v1.3\n
        SMS 문자 분석 기능 추가.\n
        환경설정에서 확인 가능.\n\n
        v1.1\n
        간단 UI 버그 수정.\n\n
        v1.0\n
        대한민국 1등 가계부 야심작. 돈테크 출시.\n\n
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- DashboardFragment -->
    <string name="recommend">앱 추천</string>
    <string name="recommend_complete">앱 추천를 완료했습니다.</string>
    <string name="extras">기타</string>

    <!-- app string -->
    <string name="announcement">공지사항</string>
    <string name="add_gagebu">가계부 추가</string>
    <string name="update_gagebu">가계부 수정</string>
    <string name="delete_gagebu">가계부 삭제</string>
    <string name="gagebu_list">가계부 리스트</string>
    <string name="my_gagebu">내 가계부</string>
    <string name="additional_function">부가 기능</string>
    <string name="ok">확인</string>
    <string name="select">선택</string>
    <string name="cancel">취소</string>
    <string name="income">수입</string>
    <string name="consume">지출</string>
    <string name="monthly">월별</string>
    <string name="lists">리스트</string>
    <string name="usage">사용내역</string>
    <string name="setting">환경설정</string>
    <string name="share">공유</string>
    <string name="select_date">날짜 선택</string>
    <string name="select_time">시간 선택</string>
    <string name="select_photopicker">사진 가져오기</string>
    <string name="pick_photo_act">사진 가져올 방법 선택</string>
    <string name="won">원</string>
    <string name="money_won">%1$s원</string>
    <string name="detail">세부내용</string>
    <string name="address">주소</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="backup_restore">백업 / 복원</string>
    <string name="saving_img">이미지를 저장중입니다...</string>
    <string name="save_location">위치 저장</string>
    <string name="no_address_selected">위치가 선택되지 않았습니다.</string>
    <string name="delete_img">사진 삭제</string>
    <string name="ask_delete_img">저장된 사진을 삭제하시겠습니까?</string>
    <string name="delete_address">주소 정보 삭제</string>
    <string name="ask_delete_address">저장된 주소 정보를 삭제하시겠습니까?</string>
    <string name="balanced_carried_over">이월</string>
    <string name="total_amount">총액</string>
    <string name="guide_to_map_app">지도 앱으로 위치 보기</string>
    <string name="others">기타</string>
    <string name="see_image">이미지 보기</string>
    <string name="app_file_path">dontech</string>
    <string name="save">저장</string>
    <string name="saved">저장되었습니다.</string>
    <string name="delete">삭제</string>
    <string name="deleted">삭제 되었습니다.</string>
    <string name="this_mon_no_usage">이번 달 사용내역이 없습니다.</string>
    <string name="statistics">통계</string>
    <string name="preparing_for_next_update">다음 업데이트에 제공될 예정입니다.</string>

    <!-- hint string -->
    <string name="plz_write_gagebu_name">가계부 이름을 입력해주세요.</string>
    <string name="plz_select_icon">아이콘을 선택해주세요.</string>
    <string name="plz_write_gagebu_name_you_wish_to_add">추가할 가게부 이름을 입력해주세요.</string>
    <string name="can_not_delete_last_one_gagebu">한개 남은 가계부를 지울 수 없습니다.</string>
    <string name="cannot_create_gagebu_more_than_10">가계부를 10개 이상 생성할 수 없습니다.</string>
    <string name="cannot_create_same_gagebu_name">이미 존재하는 가계부 명입니다. 동일한 가계부 이름을 생성할 수 없습니다.</string>
    <string name="are_you_sure_you_want_to_delete_gagebu_book">정말로 해당 가계부를 지우시겠습니까? 가계부를 삭제하면 현재까지  삭제하는 가계부에 저장된 사용내역들이 지워집니다.</string>
    <string name="plz_choose_share_target">공유할 대상을 선택해주세요.</string>
    <string name="plz_write_cost">금액을 입력해주세요.</string>
    <string name="plz_verify_cost">금액을 확인해주세요. 0보다 작거나 같을 수 없습니다.</string>
    <string name="write_search_words">검색어를 입력하세요.</string>

    <!-- permission -->
    <string name="permission_location_not_granted">위치 정보를 불러오려면 위치 권한이 필요합니다.</string>
    <string name="permission_storage_not_granted">사진을 찍거나 미디어 파일을 불러오려면 미디어 접근 권한이 필요합니다.</string>
    <string name="permission_sms_not_granted">SMS 분석 기능을 이용하시려면 문자 열람 권한이 필요합니다.</string>

    <!-- 요일 -->
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>

    <!-- import / export -->
    <string name="exporting_excel">데이터를 내보내는 중입니다...</string>
    <string name="exporting_zip">압축파일을 생성하는 중입니다...</string>
    <string name="importing_zip">압축파일을 불러오는 중입니다...</string>
    <string name="importing_excel">데이터를 입력중입니다...</string>
    <!-- import / export -->
    <string name="process_success">성공적으로 마쳤습니다!!</string>
    <string name="process_failed">실패했습니다.. 다시 시도해주세요.</string>

    <!-- 앱 추천 -->
    <string name="recommand_app">앱 추천</string>
    <string name="recommand_app_description">\n혁신적인 안드로이드 가계부 어플리케션, 돈 테크 한번 써보세요.\n\n</string>

    <!-- 수입 내역 카테고리 -->
    <string-array name="category_income">
        <item>용돈</item>
        <item>월급 </item>
        <item>보너스</item>
        <item>이자수입</item>
        <item>특별수당</item>
        <item>물품판매</item>
        <item>기타</item>
    </string-array>
    <string-array name="category_income_drawables">
        <item>ic_money_pig</item>
        <item>ic_wallet</item>
        <item>ic_circle_dollar</item>
        <item>ic_money</item>
        <item>ic_gift</item>
        <item>ic_sell</item>
        <item>ic_question</item>
    </string-array>

    <!-- 지출 내역 카테고리 -->
    <string-array name="category_consume">
        <item>식사</item>
        <item>간식</item>
        <item>숙박</item>
        <item>데이트</item>
        <item>건강</item>
        <item>경조사</item>
        <item>교통비</item>
        <item>문화생활</item>
        <item>미용</item>
        <item>생필품</item>
        <item>애완용품</item>
        <item>영화</item>
        <item>운동</item>
        <item>의류</item>
        <item>저축</item>
        <item>통신비</item>
        <item>커피</item>
        <item>술</item>
        <item>가전제품</item>
        <item>전자제품</item>
        <item>회비</item>
        <item>기타</item>
    </string-array>
    <string-array name="category_consume_drawables">
        <item>ic_eating</item>
        <item>ic_snack</item>
        <item>ic_room</item>
        <item>ic_heart</item>
        <item>ic_health</item>
        <item>ic_gift</item>
        <item>ic_taxi</item>
        <item>ic_brush</item>
        <item>ic_salon</item>
        <item>ic_towel</item>
        <item>ic_bone</item>
        <item>ic_movie</item>
        <item>ic_health</item>
        <item>ic_tshirt</item>
        <item>ic_money_pig</item>
        <item>ic_phone</item>
        <item>ic_coffee</item>
        <item>ic_drinking</item>
        <item>ic_home_appliance</item>
        <item>ic_labtop</item>
        <item>ic_users</item>
        <item>ic_question</item>
    </string-array>

    <string name="arr_down">▼</string>

    <!-- Setting Activity -->
    <string-array name="array_setting">
        <item>공지사항</item>
        <item>FAQ</item>
        <item>버전 정보</item>
        <item>SMS 문자 분석</item>
    </string-array>

    <!-- Backup / Restore-->
    <string name="backup_completed">백업이 완료되었습니다.</string>
    <string name="backup_and_restore">백업 / 복원</string>
    <string name="alert_backup_and_restore">백업 및 복원시 가이드를 준수하지 않으면 데이터가 유실될 수 있으므로 주의하시기 바랍니다.</string>
    <string name="backup">백업</string>
    <string name="restore">복원</string>
    <string name="restore_completed">복원이 완료되었습니다.</string>
    <string name="do_backup">백업하기</string>
    <string name="do_restore">복원하기</string>
    <string name="backup_guide_announce">다운로드 폴더에 백업 압축파일을 생성했습니다. 생성된 압축파일을 다른 폰의 다운로드 폴더로 이동하여 복원을 할 수 있습니다.</string>
    <string name="html_ask_before_backup">
        <p>백업을 하시면 다운로드(Download) 폴더에</p>
        <p>dontech.zip 파일이 생성됩니다.</p>
        <p>다른 폰에서 다운로드 폴더에 파일을 옮기고 복원을 진행하면</p>
        <p>복원이 진행됩니다. 백업을 진행하시겠습니까?</p>
    </string>
    <string name="html_ask_before_restore">
            <p>데이터를 복원하기 전에 다운로드(Download) 폴더에</p>
            <p>dontech.zip 파일이 있어야 합니다.</p>
            <p>복원을 진행하시겠습니까?</p>
    </string>

    <string name="ask_exit">돈테크를 종료하시겠습니까?</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>

    <string name="auto_msg_guide">현재는 현대카드 문자만 파싱 가능합니다. 이점 유의해주세요.</string>
    <string name="choose_gagebu_used_in_sms_parsing">SMS 파싱 기능을 사용할 가계부를 하나 선택해주세요.</string>
    <!-- sms 문자 추가 알림 -->
    <string name="sms_data_received">새로운 카드 사용내역이 있습니다.</string>
    <string name="will_you_add">사용내역을 추가하시겠습니까?</string>
    <!-- 카드 사용 -->
    <string name="card_withdraw">카드출금</string>
    <string name="card_deposit">카드입금</string>
</resources>
