<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:background="@drawable/rec_stroke"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@color/colorSubPrimary"
        android:layout_width="match_parent"
        android:layout_height="57dp">
        <TextView
            android:text="@string/select_time"
            android:textColor="@android:color/white"
            android:textSize="21.3sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:calendarViewShown="false"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/btn_cancel"
            android:background="@drawable/sel_btn_cancel"
            android:layout_height="48dp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textSize="15.3sp"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_select"
            android:background="@drawable/sel_btn_ok"
            android:layout_height="48dp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/select"
            android:textSize="15.3sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>