<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">

    <!-- 총액, 수입액, 지출액, 이월 금액 상단 표시-->
    <LinearLayout
        android:id="@+id/lin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <!-- 총액 & 이월 금액 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <LinearLayout
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- 총액 -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_total_amount"
                        android:layout_marginLeft="20dp"
                        android:text="100,000원"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!-- 이월 -->
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/balanced_carried_over"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_balance_carried_over"
                        android:layout_marginLeft="20dp"
                        android:text="10,000원"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <!-- 수입액 & 지출액 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <LinearLayout
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- 수입 -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_income_amount"
                        android:textColor="@color/income"
                        android:layout_marginLeft="20dp"
                        android:text="100,000원"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!-- 지출 -->
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/consume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_consume_amount"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/consume"
                        android:text="10,000원"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- 요일 표시 -->
    <LinearLayout
        android:id="@+id/lin_days"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:weightSum="7"
        android:layout_below="@+id/lin_top">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/sunday"
                android:textColor="@color/colorSubPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/monday"
                android:textColor="@color/colorSubPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/tuesday"
                android:textColor="@color/colorSubPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/wednesday"
                android:textColor="@color/colorSubPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/thursday"
                android:textColor="@color/colorSubPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/friday"
                android:textColor="@color/colorSubPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/saturday"
                android:textColor="@color/colorSubPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:id="@+id/view_line_1"
        android:layout_below="@id/lin_days"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/ccc"
        android:layout_gravity="bottom"/>

    <org.hyochan.dontech.utils.MyGridView
        android:id="@+id/grid_days"
        android:layout_below="@id/view_line_1"
        android:layout_above="@+id/view_line_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:verticalSpacing="0.3dp"
        android:horizontalSpacing="0.3dp"
        android:stretchMode="columnWidth"
        android:numColumns="7" />
    <View
        android:id="@+id/view_line_2"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_height="0.3dp"
        android:background="@color/ccc"
        android:layout_gravity="bottom"/>
</RelativeLayout>