<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_popup_top_background"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="21sp"
            android:typeface="sans" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="30dp"
            android:textColor="#393939"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:background="@drawable/round_button_selector_left"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="21sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:background="@drawable/round_button_selector_right"
            android:text="@string/ok"
            android:textColor="#ffffff"
            android:textSize="21sp" />
    </LinearLayout>

</LinearLayout>